--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "slidev-theme-the-unnamed": "0.0.10"
   },
   "devDependencies": {
-    "@iconify-json/logos": "^1.1.34"
+    "@iconify-json/logos": "^1.1.34",
+    "playwright-chromium": "^1.37.1"
   }
 }
